// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="Ellipsis-sc-1dn9bou-0 gzqRPC"
  >
    <span
      class="styled__ErrorText-sc-1dtvgs1-20 fSEPRL"
      title="Test.Error: Test error description"
    >
      <i
        class="IconContainer__I-sc-16whwc5-0 bXwiKG fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-4 eyxhwb"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-5 efmbmX"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-10 styled__StyledCypherErrorMessage-sc-1dtvgs1-12 exWlHZ"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledErrorH4-sc-1dtvgs1-17 DSsi"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1dtvgs1-19 bNiVzc"
        >
          not found
        </pre>
      </div>
      <div
        class="styled__StyledLinkContainer-sc-1dtvgs1-9 dZlgHA"
      >
        <a
          class="styled__StyledLink-sc-1dtvgs1-8 fPQgTq"
        >
          <i
            class="IconContainer__I-sc-16whwc5-0 eTELIJ fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-4 eyxhwb"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-5 efmbmX"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-10 styled__StyledCypherErrorMessage-sc-1dtvgs1-12 exWlHZ"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledErrorH4-sc-1dtvgs1-17 DSsi"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1dtvgs1-19 bNiVzc"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
